# sun-burn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: build.yml  pages.yml  release-please.yml  test.yml
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  mock.ts  store.ts  types.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: devices.rs  flash.rs  manifest.rs  mod.rs  ssh.rs  wifi.rs
app/src/components/: DriveCard.tsx  ProgressRing.tsx  StepSidebar.tsx  Toggle.tsx  WifiPicker.tsx
app/src/steps/: ConfigStep.tsx  Confirm.tsx  Done.tsx  Flashing.tsx  SelectDrive.tsx  SelectImage.tsx
crates/device-enumerator/: Cargo.toml
crates/device-enumerator/src/: lib.rs
crates/flasher/: Cargo.toml
crates/flasher/src/: lib.rs
crates/image-patcher/: Cargo.toml
crates/image-patcher/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/wifi-scanner/: Cargo.toml
crates/wifi-scanner/src/: lib.rs
docs/: sunburn-manifest-spec.md
docs/site/: index.html  script.js  style.css
