[package]
name = "wifi-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
wifi_scan = "0.7"
objc2 = "0.6"
objc2-core-location = { version = "0.3", features = ["CLLocationManager"] }
objc2-foundation = { version = "0.3", features = ["NSRunLoop", "NSDate"] }
